# crazyflie_clean

./: .gitignore  README.md
ros/src/: CMakeLists.txt
ros/src/crazyflie_control_merger/: CMakeLists.txt  package.xml
ros/src/crazyflie_control_merger/exec/: no_yaw_merger_node.cpp  takeoff_node.cpp
ros/src/crazyflie_control_merger/src/: cmd_vel_converter.cpp  control_merger.cpp  no_yaw_merger.cpp  takeoff.cpp
ros/src/crazyflie_examples/: CMakeLists.txt  package.xml
ros/src/crazyflie_examples/launch/: hw_hover.launch  sw_hover.launch
ros/src/crazyflie_examples/src/: cf_waypoint.py  disturbance.py  move_server.py
ros/src/crazyflie_lqr/: CMakeLists.txt  package.xml
ros/src/crazyflie_lqr/exec/: crazyflie_lqr_node.cpp  dubins_state_lift_lqr_node.cpp  dubins_state_lqr_node.cpp  full_state_lqr_node.cpp  position_velocity_yaw_state_lift_lqr_node.cpp  position_velocity_yaw_state_lqr_node.cpp
ros/src/crazyflie_lqr/launch/: demo.launch
ros/src/crazyflie_lqr/references/: K.txt  K_hover.txt  K_lqr.txt  K_manual.txt  K_sander.txt  K_test.txt  crazyflie_lqr_compute.m  u_ref_hover.txt  uref1.txt  uref3.txt  x_ref_hover.txt
ros/src/crazyflie_lqr/src/: crazyflie_lqr.cpp  dubins_state_lift_lqr.cpp  dubins_state_lqr.cpp  (+5 more)
ros/src/crazyflie_msgs/: CMakeLists.txt
ros/src/crazyflie_msgs/msg/: DisturbanceStamped.msg  DubinsStateStamped.msg  PositionState.msg  PositionVelocityStateStamped.msg  State.msg  StateStamped.msg
ros/src/crazyflie_simulator/: CMakeLists.txt  package.xml
ros/src/crazyflie_state_estimator/: CMakeLists.txt
ros/src/crazyflie_takeoff/: CMakeLists.txt
(+61 files in other folders)
